# alimentar

./: .cargo-mutants.toml  .clippy.toml  .editorconfig  .gitignore  .pmat-gates.toml  .pmat.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  REDIRECT.md  SECURITY.md  cliff.toml  codecov.yml  deny.toml  docker-compose.yml  justfile  rustfmt.toml
.cargo/: config.toml  mutants.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  deny.yml  deploy-docs.yml  msrv.yml  nightly.yml  release.yml
.pmat/: baseline.json  context.db  coverage-cache.json  dead-code-cache.json  project.toml
.pmat-metrics/: commit-4e69a19-meta.json  commit-d01ffa3-meta.json
.pmat-work/GH-013/: contract.json
.pmat/metrics/: dependencies.json
.pmat/work/: GH-11.yaml  REPL-001.yaml
.pv/: lint-previous.json
benches/: dataset_bench.rs
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/100-examples/: basic-loading.md  cli-repl.md  dataloader-batching.md  drift-detection.md  edge-cases-wasm.md  federated-splitting.md  huggingface-hub.md  overview.md  quality-validation.md  streaming-memory.md  transforms-pipeline.md
book/src/architecture/: module-structure.md
book/src/backends/: backend-trait.md  http.md  memory.md  s3.md
book/src/cli/: convert.md  head.md  info.md  overview.md  registry.md  schema.md  view.md
book/src/dataloader/: drop-last.md  iteration-patterns.md  shuffling.md
book/src/dataset/: arrow-dataset.md  json-files.md  operations.md  parquet-files.md  streaming.md
book/src/datasets/: cifar10.md  cifar100.md  fashion-mnist.md  iris.md  mnist.md  overview.md
book/src/ecosystem/: aprender.md  assetgen.md  trueno.md
book/src/examples/: format-conversion.md  ml-pipeline.md  registry-workflow.md  streaming.md
book/src/getting-started/: core-concepts.md  installation.md  quick-start.md
book/src/hf-hub/: cache.md  importing.md  publishing.md
book/src/registry/: format.md  publishing.md  pulling.md
book/src/serve/: book-plugin.md  browser-integration.md  course-plugin.md  dataset-plugin.md  plugins.md  raw-source-plugin.md  serveable-content.md
book/src/transforms/: built-in.md  chaining.md  custom.md  fillnull.md  take-skip.md  transform-trait.md
contracts/: batch-loading-v1.yaml
contracts/.pv/cache/lint/: a0175031ad425065.json  be623719c92bc7be.json  dd847508e190a084.json
docs/execution/: roadmap.md
docs/guides/: doctest-extraction.md  huggingface-publishing.md
docs/qa/: status-report-nov-30-2025-100pt-checklist.md
docs/roadmaps/: epic-100-examples.yaml  roadmap.yaml
docs/specifications/: 100-cargo-run-examples-spec.md  alimentar-spec-v1.md  cli-repl-quality.md  data-quality-tooling-improvement-spec.md  dataset-format-spec.md  missing-sharing-capabilities-spec.md  tui-wasm-viewer.md  wasm-serve-spec.md
examples/: basic_loading.rs  cli_batch_commands.rs  dataloader_batching.rs  doctest_extraction.rs  drift_detection.rs  federated_split.rs  hub_publishing.rs  prose_detection.rs  quality_check.rs  registry_publish.rs  repl_commands.rs  repl_completer.rs  repl_display_config.rs  repl_health_status.rs  repl_session.rs  streaming_large.rs  transforms_pipeline.rs  tui_viewer.rs
proptest-regressions/doctest/: parser.txt
scripts/: generate_fixtures.rs  run_qa_spec.sh
src/: async_prefetch.rs  cli.rs  dataloader.rs  dataset.rs  drift.rs  error.rs  federated.rs  generated_contracts.rs  hf_hub.rs  imbalance.rs  lib.rs  main.rs  mmap.rs  parallel.rs  quality.rs  sketch.rs  split.rs  streaming.rs  tensor.rs  transform.rs  verification_specs.rs  weighted.rs
src/backend/: http.rs  local.rs  memory.rs  mod.rs  s3.rs
src/cli/: basic.rs  drift.rs  fed.rs  hub.rs  mod.rs  quality.rs  registry.rs  view.rs
src/datasets/: cifar10.rs  cifar100.rs  fashion_mnist.rs  iris.rs  mnist.rs  mod.rs
src/doctest/: instruct.rs  mod.rs  parser.rs
src/format/: crc.rs  encryption.rs  license.rs  mod.rs  piracy.rs  signing.rs  streaming.rs  tests.rs
src/hf_hub/: download.rs  mod.rs  tests.rs  upload.rs  validation.rs
src/quality/: checks.rs  decontaminate.rs  mod.rs  profiles.rs  scoring.rs  tests.rs
src/registry/: index.rs  mod.rs
src/repl/: commands.rs  completer.rs  mod.rs  prompt.rs  session.rs
src/serve/: content.rs  mod.rs  plugin.rs  raw_source.rs  schema.rs
src/transform/: fim.rs  mod.rs  numeric.rs  row_ops.rs  selection.rs
src/tui/: adapter.rs  error.rs  format.rs  mod.rs  row_detail.rs  schema_inspector.rs  scroll.rs  viewer.rs
tests/: cli_repl_tests.rs  contract_traits.rs  doctest_parsing_test.rs  example_scenarios.rs  integration.rs  repl_mutation_targets.rs  repl_property_tests.rs  s3_integration.rs  tui_snapshot_tests.rs
